# BA_MLOPs_02_ML_Pipelines_BLANK_POETRY-main

./: pyproject.toml
.github/workflows/: docker.yml
00_initial_code/saved_models/: churn_model_run_log.json  churn_prediction_model_v1.joblib
01_Code_Refractoring_Churn_ML_Project/: 00_Support_Notes_Refractoring.ipynb  main.py
01_Code_Refractoring_Churn_ML_Project/model_store/: churn_model_run_log.json  churn_prediction_model_v1.joblib
01_Code_Refractoring_Churn_ML_Project/src/: model.py
02_Testing_CICD_Churn_ML_Project/: 00_Support_Notes_Testing &CI_CD Pipeline_on_ML_Project.ipynb
02_Testing_CICD_Churn_ML_Project/src/: config.py  data_loader.py  model.py  pipeline.py  preprocessing.py
02_Testing_CICD_Churn_ML_Project/tests/integration/: test_data_preprocessing_integration.py  test_model_metrics_integration.py  test_preprocessing_transform_integration.py
02_Testing_CICD_Churn_ML_Project/tests/unit/: test_data_loader.py  test_model.py  test_pipeline.py  test_preprocessing.py
03_Testing_CICD_Docker_Classification_APP/: 00_Support_Notes_Deploy_App.ipynb
03_Testing_CICD_Docker_Classification_APP/src/: config.py
03_Testing_CICD_Docker_Classification_APP/tests/mlruns/862380354032586462/44f8f2ecf12a41b8a8b8275893757c4a/metrics/: fold_1_f1  fold_1_precision  fold_1_recall  fold_1_roc_auc  fold_2_f1  fold_2_precision  fold_2_recall  fold_2_roc_auc  (+16 more)
04_ML_Flow/: 00_Support_Notes_MLFlow.ipynb  app.py
Example Exercises/: 00_Support_Notes_Unittest.ipynb  Rectangle.py  test_Rectangle.py  test_add.py
github/workflows/: churn_ml_pipeline_unittest_ci_cd.yml
(+24 files in other folders)
