[project]
name = "BA_MLOPs_02_COACH_POETRY"
version = "1.0.0"
description = "MLOps training environment."
authors = [{ name = "Miguel Sanchez", email = "miguelsanchez@rockborne.com" }]
requires-python = ">=3.11,<3.12"
dependencies = [
  "attrs==22.1.0",
  "configparser==7.2.0",
  "contextlib2==21.6.0",
  "cryptography==45.0.6",
  "cython==3.1.3",
  "dl==0.1.0",
  "docutils==0.18.1",
  "fastapi==0.116.1",
  "htmlparser==0.0.2",
  "ipython==8.12.3",
  "ipywidgets==8.1.5",
  "jinja2==3.1.2",
  "keyring==23.13.1",
  "lockfile==0.12.2",
  "matplotlib==3.7.1",
  "mlflow-skinny==3.1.1",
  "mock==5.2.0",
  "pillow==11.3.0",
  "prometheus-client==0.14.1",
  "pydantic==2.11.7",
  "pyopenssl==25.1.0",
  "railroad==0.5.0",
  "scikit-learn==1.3.0",
  "sphinx==5.0.2",
  "tornado==6.3.2",
  "uvicorn==0.34.3",
  "pandas==2.3.1",
  "evidently==0.7.12",
  "truststore==0.10.4",
  "urllib3-secure-extra==0.1.0",
  "trove-classifiers==2025.8.6.13",
  "numpy (==1.26.4)",
  "scipy (==1.11.4)",
  "seaborn (==0.13.2)",
  "mlflow (==3.1.1)",
  "ipykernel (>=6.30.1,<7.0.0)"
]

[tool.poetry]
# Poetry-specific settings belong here, not under [project]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
